docs/0.19/_sources/api/gammapy.data.ObservationTable.rst.txt
ObservationTable
================

.. currentmodule:: gammapy.data

.. autoclass:: ObservationTable
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ObservationTable.ColumnClass
      ~ObservationTable.colnames
      ~ObservationTable.dtype
      ~ObservationTable.groups
      ~ObservationTable.has_masked_columns
      ~ObservationTable.has_masked_values
      ~ObservationTable.has_mixin_columns
      ~ObservationTable.iloc
      ~ObservationTable.indices
      ~ObservationTable.info
      ~ObservationTable.loc
      ~ObservationTable.loc_indices
      ~ObservationTable.mask
      ~ObservationTable.masked
      ~ObservationTable.meta
      ~ObservationTable.pointing_galactic
      ~ObservationTable.pointing_radec
      ~ObservationTable.pprint_exclude_names
      ~ObservationTable.pprint_include_names
      ~ObservationTable.time_ref
      ~ObservationTable.time_start
      ~ObservationTable.time_stop
      ~ObservationTable.write

   .. rubric:: Methods Summary

   .. autosummary::

      ~ObservationTable.add_column
      ~ObservationTable.add_columns
      ~ObservationTable.add_index
      ~ObservationTable.add_row
      ~ObservationTable.argsort
      ~ObservationTable.as_array
      ~ObservationTable.convert_bytestring_to_unicode
      ~ObservationTable.convert_unicode_to_bytestring
      ~ObservationTable.copy
      ~ObservationTable.field
      ~ObservationTable.filled
      ~ObservationTable.from_pandas
      ~ObservationTable.get_obs_idx
      ~ObservationTable.group_by
      ~ObservationTable.index_column
      ~ObservationTable.index_mode
      ~ObservationTable.insert_row
      ~ObservationTable.items
      ~ObservationTable.itercols
      ~ObservationTable.iterrows
      ~ObservationTable.keep_columns
      ~ObservationTable.keys
      ~ObservationTable.more
      ~ObservationTable.pformat
      ~ObservationTable.pformat_all
      ~ObservationTable.pprint
      ~ObservationTable.pprint_all
      ~ObservationTable.read
      ~ObservationTable.remove_column
      ~ObservationTable.remove_columns
      ~ObservationTable.remove_indices
      ~ObservationTable.remove_row
      ~ObservationTable.remove_rows
      ~ObservationTable.rename_column
      ~ObservationTable.rename_columns
      ~ObservationTable.replace_column
      ~ObservationTable.reverse
      ~ObservationTable.round
      ~ObservationTable.select_obs_id
      ~ObservationTable.select_observations
      ~ObservationTable.select_range
      ~ObservationTable.select_sky_circle
      ~ObservationTable.select_time_range
      ~ObservationTable.show_in_browser
      ~ObservationTable.show_in_notebook
      ~ObservationTable.sort
      ~ObservationTable.summary
      ~ObservationTable.to_pandas
      ~ObservationTable.values
      ~ObservationTable.values_equal

   .. rubric:: Attributes Documentation

   .. autoattribute:: ColumnClass
   .. autoattribute:: colnames
   .. autoattribute:: dtype
   .. autoattribute:: groups
   .. autoattribute:: has_masked_columns
   .. autoattribute:: has_masked_values
   .. autoattribute:: has_mixin_columns
   .. autoattribute:: iloc
   .. autoattribute:: indices
   .. autoattribute:: info
   .. autoattribute:: loc
   .. autoattribute:: loc_indices
   .. autoattribute:: mask
   .. autoattribute:: masked
   .. autoattribute:: meta
   .. autoattribute:: pointing_galactic
   .. autoattribute:: pointing_radec
   .. autoattribute:: pprint_exclude_names
   .. autoattribute:: pprint_include_names
   .. autoattribute:: time_ref
   .. autoattribute:: time_start
   .. autoattribute:: time_stop
   .. autoattribute:: write

   .. rubric:: Methods Documentation

   .. automethod:: add_column
   .. automethod:: add_columns
   .. automethod:: add_index
   .. automethod:: add_row
   .. automethod:: argsort
   .. automethod:: as_array
   .. automethod:: convert_bytestring_to_unicode
   .. automethod:: convert_unicode_to_bytestring
   .. automethod:: copy
   .. automethod:: field
   .. automethod:: filled
   .. automethod:: from_pandas
   .. automethod:: get_obs_idx
   .. automethod:: group_by
   .. automethod:: index_column
   .. automethod:: index_mode
   .. automethod:: insert_row
   .. automethod:: items
   .. automethod:: itercols
   .. automethod:: iterrows
   .. automethod:: keep_columns
   .. automethod:: keys
   .. automethod:: more
   .. automethod:: pformat
   .. automethod:: pformat_all
   .. automethod:: pprint
   .. automethod:: pprint_all
   .. automethod:: read
   .. automethod:: remove_column
   .. automethod:: remove_columns
   .. automethod:: remove_indices
   .. automethod:: remove_row
   .. automethod:: remove_rows
   .. automethod:: rename_column
   .. automethod:: rename_columns
   .. automethod:: replace_column
   .. automethod:: reverse
   .. automethod:: round
   .. automethod:: select_obs_id
   .. automethod:: select_observations
   .. automethod:: select_range
   .. automethod:: select_sky_circle
   .. automethod:: select_time_range
   .. automethod:: show_in_browser
   .. automethod:: show_in_notebook
   .. automethod:: sort
   .. automethod:: summary
   .. automethod:: to_pandas
   .. automethod:: values
   .. automethod:: values_equal
